src/main/java/com/example/obrestdata_jpa/Error/BookNotCreateException.java
package com.example.obrestdata_jpa.Error;

public class BookNotCreateException extends RuntimeException {
    public BookNotCreateException(String message) {
        super(message);
    }
}
